fixed dark mode

--- a/src/main/resources/css/dark-theme.css
+++ b/src/main/resources/css/dark-theme.css
@@ -7,7 +7,7 @@
 }
 
 .tab-content-area{
-    -fx-background-color: #616161;
+    -fx-background-color: linear-gradient(to bottom ,#616161 70%,#181818 30%);
 
 
 }
